<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search_view"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:iconTint="@color/black"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:icon="@drawable/ic_baseline_sort_24"
        android:title="@string/sort"
        app:iconTint="@color/black"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_sort_by_name"
                android:title="@string/sort_by_name" />

            <item
                android:id="@+id/action_sort_by_date"
                android:title="@string/sort_by_date" />
        </menu>

    </item>

    <item
        android:id="@+id/action_hide_completed"
        android:checkable="true"
        android:title="@string/hide_completed"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never" />

</menu>